--- a/styles.css
+++ b/styles.css
@@ -79,20 +79,15 @@ body {
   position: relative;
 }
 
-.vhf-label {
-  color: #2f4f2f;
-  font-size: 12px;
-  text-align: center;
-  font-weight: bold;
-}
 .channel-dial {
-  width: 200px;
+  width: 180px;
   height: 155px;
   background: radial-gradient(circle, #8f918f, #535353);
   border-radius: 50%;
   position: relative;
   cursor: pointer;
   margin: 0 auto;
+  margin-top: 27px; /* Add margin to move it down */
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3),
     inset 0 2px 5px rgba(255, 255, 255, 0.2);
   transition: all 0.1s ease;
@@ -108,10 +103,10 @@ body {
 
 .dial-pointer {
   position: relative;
-  top: 35%;
+  top: 25%;
   left: 50%;
-  width: 4px;
-  height: 25px;
+  width: 6px;
+  height: 45px;
   background: #333333;
   transform: translate(-50%, -50%);
   border-radius: 2px;
@@ -120,13 +115,17 @@ body {
 }
 .power-buttons {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
 .power-btn {
-  width: 40px;
-  height: 40px;
+  width: 80px;
+  height: 80px;
+  margin-top: 8px;
+  margin-right: 6px;
   border-radius: 50%;
   border: none;
   cursor: pointer;
