--- a/styles.css
+++ b/styles.css
@@ -41,9 +41,9 @@ body {
 }
 
 .screen {
-  width: 100%;
-  height: 100%;
-
+  width: 900px; /* Adjust width to fit within TV image */
+  height: 500px; /* Adjust height to fit within TV image */
+  margin: auto; /* Center the screen within the TV */
   border-radius: 8px;
   position: relative;
   overflow: hidden;
@@ -51,12 +51,16 @@ body {
 }
 
 .content {
-  width: 100%;
-  height: 100%;
+  width: 650px; /* Adjust width to fit within screen */
+  height: 450px; /* Adjust height to fit within screen */
+  margin: auto; /* Center the content within the screen */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: url("textbg.png") no-repeat center center;
+  background-size: cover; /* Adjust size */
+  background-position: center; /* Adjust placement */
   color: white;
   text-align: center;
   padding: 20px;
@@ -136,17 +140,17 @@ body {
 }
 
 .on-btn {
-  background: radial-gradient(circle, #90ee90, #32cd32);
+  background: radial-gradient(circle, #887d74, #5a564e);
   color: #000000;
 }
 
 .off-btn {
-  background: radial-gradient(circle, #ffb6c1, #ff1493);
+  background: radial-gradient(circle, #887d74, #5a564e);
   color: #000000;
 }
 
 .vhs-btn {
-  background: radial-gradient(circle, #dda0dd, #9370db);
+  background: radial-gradient(circle, #887d74, #5a564e);
   color: #000000;
 }
 
